# VelociLoops

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  justfile
.github/workflows/: coverage.yml  fuzz.yml  sanitizers.yml  tests.yml
demo/: CMakeLists.txt  main.cpp
docs/: api.md  conf.py  format.md  index.md
fuzz/: CMakeLists.txt
include/: velociloops.h
scripts/: visualize_rx2.py
src/: fft8g.h  velociloops.cpp
tests/: CMakeLists.txt  fuzz_velociloops.cpp  test_superflux.cpp  test_velociloops.cpp
tests/data/: 120FourBeats.rx2_exported.raw  120Mono.rx2  ErrorSyntheticAiffBadBits.rcy  ErrorSyntheticAiffBadChannels.rcy  ErrorSyntheticAiffBadRate.rcy  ErrorSyntheticAiffBadTempo.rcy  ErrorSyntheticAiffEmptySsnd.rcy  ErrorSyntheticAiffNoApp.rcy  ErrorSyntheticAiffShortTempo.rcy  ErrorSyntheticAiffZeroFrames.rcy  ErrorSyntheticAiffZeroLoop.rcy  ErrorSyntheticGlobShort.rx2  ErrorSyntheticGlobTempo.rx2  ErrorSyntheticHeadMagic.rx2  ErrorSyntheticHeadTooNew.rx2  ErrorSyntheticNoDwop.rx2  ErrorSyntheticOversizedSdat.rx2  ErrorSyntheticSinfShort.rx2  ErrorSyntheticSinfZeroFrames.rx2
